--- a/src/App.css
+++ b/src/App.css
@@ -1,50 +1,20 @@
-#root {
-  flex-grow: 1;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: auto;
-  
-}
-
-.navbar {
+.navbar{
   display:flex ;
-  justify-content: space-between;
-  align-items: center;
   gap: 50px;
-  background-color:rgb(215, 151, 73);
-  padding-left: 40px;
-  padding-right: 40px;
+  background-color:antiquewhite;
+  padding:10px;
   list-style: none;
-  width: 100%;
-  height: 60px;
-  position: static;
 }
 
-.register {
-  margin: 30%;
+.post-card{
+  border: 1px solid black;
+  width: 30%;
+  border-radius: 5px;
+  padding: 0px 20px;
 }
 
-.inputfield {
-  padding: 1rem;
-  display: block;
-  border: 1px solid navy;
-  width: 15rem;
-  margin: 1rem;
-}
-
-.actionbutton {
-  margin: 1rem;
-  width: 10rem;
-  padding: 1rem;
-  background-color: lightgray; 
-  border: 1px solid;
-  cursor: pointer;
-}
-
-.posts {
+.posts-container{
   display: flex;
-  flex-direction: column;
-
+  gap: 30px;
+  flex-wrap: wrap;
 }
