--- a/src/index.css
+++ b/src/index.css
@@ -14,12 +14,6 @@
   -webkit-text-size-adjust: 100%;
 }
 
-.post {
-  display: flex;
-  flex-direction: column;
-  
-}
-
 a {
   font-weight: 500;
   color: #646cff;
@@ -28,16 +22,17 @@ a {
 a:hover {
   color: #535bf2;
 }
-
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 body {
   margin: 0;
   display: flex;
   place-items: center;
-  background-color: rgb(175, 185, 204);
-  text-align: center;
-  min-height: 100vh;
   min-width: 320px;
-
+  min-height: 100vh;
 }
 
 h1 {
